feat: 줄바꿈 오류 수정

--- a/python/문자열.md
+++ b/python/문자열.md
@@ -2,8 +2,7 @@
 <pre>
 <code>x = 'hello' #작은 따옴표나
 y = "World!" #큰 따옴표
-print(type(x), type(y))
-</code>
+print(type(x), type(y))</code>
 </pre>
 > <class 'str'> <class 'str'>
 
